other-vpol/exclude-namespaces-dynamically/.chainsaw-test/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: allow-exact-default-pod
  namespace: policy-exceptions
spec:
  policyRefs:
    - kind: ValidatingPolicy
      name: exclude-namespaces-example
  allowedValues:
    - default
  matchConditions:
    - name: exact-create-request
      expression: request.operation == 'CREATE' && request.kind.kind == 'Pod' && request.name == 'badpod01' && request.namespace == 'default'
