other-vpol/exclude-namespaces-dynamically/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: default
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  labels:
    bar: foo
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
