other-vpol/exclude-namespaces-dynamically/.chainsaw-test/pod-bad02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: default
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
