other-vpol/exclude-namespaces-dynamically/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: exclude-namespaces-dynamically
spec:
  steps:
  - name: shared-exception-namespace
    skipDelete: true
    try:
    - apply:
        file: policy-exceptions-namespace.yaml
  - name: step-01
    try:
    - apply:
        file: cm.yaml
    - apply:
        file: ns.yaml
    - apply:
        file: ../exclude-namespaces-dynamically.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: exclude-namespaces-example
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        file: podcontroller-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontroller-bad.yaml
  - name: step-03
    try:
    - apply:
        file: exception.yaml
    - apply:
        file: pod-bad01.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Pods must have the "foo" label in metadata.labels')): true
        file: pod-bad02.yaml
    - delete:
        file: pod-bad01.yaml
    - delete:
        file: exception.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Pods must have the "foo" label in metadata.labels')): true
        file: pod-bad01.yaml
